--- a/docker/configs/nginx.conf
+++ b/docker/configs/nginx.conf
@@ -25,6 +25,26 @@ http {
             etag on;
         }
 
+        location /index-mob.js.map {
+            etag on;
+        }
+
+        location /sentry-cdn-bundle-5.5.0.min.js {
+            etag on;
+        }
+
+        location /sentry-cdn-bundle-5.5.0.min.js.map {
+            etag on;
+        }
+
+        location /mdtoast.min.css {
+            etag on;
+        }
+
+        location /mdtoast.js {
+            etag on;
+        }
+
         location / {
             etag on;
             try_files $uri /index.html;
